navbar fix on mobile

--- a/_sass/_custom.sass
+++ b/_sass/_custom.sass
@@ -19,13 +19,7 @@
 
 
 
-.fa-bars
-	color: #fff
 
-.navbar-andross
-	.navbar-brand
-		color: #fff
-		// margin-top: 10px
 #side-logo
 	width: 90%
 	margin: 0 auto
